force-app/main/default/objects/Employee_Checklist__c/Employee_Checklist__c.object-meta.xml
<CustomObject>
    <label>Employee Checklist</label>
    <nameField>
        <displayFormat>Checklist-{00000}</displayFormat>
        <label>Employee Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>