force-app/main/default/objects/Employee_Checklist__c/fields/Final_Completion_Notes__c.field-meta.xml
<CustomField>
    <fullName>Final_Completion_Notes__c</fullName>
    <label>Final Setup Completion Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>