force-app/main/default/objects/Employee_Checklist__c/fields/Final_Setup__c.field-meta.xml
<CustomField>
    <fullName>Final_Setup__c</fullName>
    <formula>if (RecordTypeId=&quot;0124y0000011y4w&quot;,

&quot;Post-Start Date Setup:&quot; &amp; br() &amp;
&quot;* Ensure that Contact record is created&quot; &amp; br() &amp;
&quot;* Update Employee record with birthday information&quot; &amp; br() &amp;
&quot;* For Cleanslate Crew Chiefs, add to Intern Evaluation and Write-Up drop-downs in FormAssembly&quot;,

if (RecordTypeId=&quot;0124y0000011y51&quot;,

&quot;General New Hire steps can be found here: &quot;&amp; br()&amp; HYPERLINK(&quot;https://thecaraprogram.sharepoint.com/:w:/s/Solutions/EWgX-6Clw2xBvCrTi0ZIXo8BnytqHEKQjFV-Kb1uMNQzrQ?e=7OJ1uF&quot;, &quot;Solutions New Hire Steps - General&quot;, &quot;_blank&quot;)&amp; br() &amp; br() &amp;

&quot;Cleanslate Crew Chief New Hire steps can be found here: &quot;&amp; br()&amp; HYPERLINK(&quot;https://thecaraprogram.sharepoint.com/:w:/s/Solutions/EaQSYEDY2i9KvGU5syEwFVoBlgoHQBCMrETXC5HMP-uWWA?e=KRcY9i&quot;, &quot;Solutions New Hire Steps - Cleanslate Crew Chief&quot;, &quot;_blank&quot;),

if (RecordTypeId=&quot;0124y0000011y56&quot;,

&quot;Employee Update steps can be found here: &quot;&amp; br()&amp; HYPERLINK(&quot;https://thecaraprogram.sharepoint.com/:w:/s/Solutions/Eey5nYBOQo9Pmo1kUBvV8LEBM_zrXK9_ZUFKvSnGU7tBWA?e=ljvCPQ&quot;, &quot;Solutions Employee Update Steps&quot;, &quot;_blank&quot;),

if (RecordTypeId=&quot;0124y0000011y5B&quot;,

&quot;Employee Update steps can be found here: &quot;&amp; br()&amp; HYPERLINK(&quot;https://thecaraprogram.sharepoint.com/:w:/s/Solutions/ET9_eUEPAJpAugxKswNV5_wBLPcm6e1WehcbvUAoyqJPpg?e=HHuDas&quot;, &quot;Solutions Employee Departure Steps&quot;, &quot;_blank&quot;),

NULL))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Setup</label>
    <type>Text</type>
</CustomField>