force-app/main/default/objects/Employee_Checklist__c/fields/Final_Start_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Start_Completion_Date__c</fullName>
    <label>Final Setup Completion Date</label>
    <type>Date</type>
</CustomField>