force-app/main/default/objects/Employee_Checklist__c/fields/IT_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Completion_Date__c</fullName>
    <label>IT Completion Date</label>
    <type>Date</type>
</CustomField>