force-app/main/default/objects/Employee_Checklist__c/fields/IT_Completion_Notes__c.field-meta.xml
<CustomField>
    <fullName>IT_Completion_Notes__c</fullName>
    <label>IT Completion Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>