force-app/main/default/objects/Employee_Checklist__c/fields/IT_Setup__c.field-meta.xml
<CustomField>
    <fullName>IT_Setup__c</fullName>
    <formula>if (RecordTypeId=&quot;0124y0000011y4w&quot;,

&quot;General IT Setup:&quot; &amp; br() &amp;
&quot;* Create Active Directory account&quot; &amp; br() &amp;
&quot;* Assign license in Office 365&quot; &amp; br() &amp;
&quot;* Add to relevant distribution lists&quot; &amp; br() &amp;
&quot;* Grant permissions to E-Drive folders&quot; &amp; br() &amp;
&quot;* Allocate phone number&quot; &amp; br() &amp;
&quot;* Allow shared printer access through Papercut&quot; &amp; br() &amp;
&quot;* Activate key fob&quot;

&amp; br()&amp;br() &amp;

&quot;Computer Setup:&quot; &amp; br() &amp;
&quot;* Install custom fonts&quot; &amp; br() &amp;
&quot;* Setup signature&quot; &amp; br() &amp;
&quot;* Add special Outlook calendars&quot; &amp; br() &amp;
&quot;* Refer to Staff Computer Configurations on E-Drive for further information&quot;,

if (RecordTypeId=&quot;0124y0000011y51&quot;,

&quot;General New Hire steps can be found here: &quot;&amp; br()&amp; HYPERLINK(&quot;https://thecaraprogram.sharepoint.com/:w:/s/Solutions/EWgX-6Clw2xBvCrTi0ZIXo8BnytqHEKQjFV-Kb1uMNQzrQ?e=7OJ1uF&quot;, &quot;Solutions New Hire Steps - General&quot;, &quot;_blank&quot;)&amp; br() &amp; br() &amp;

&quot;Cleanslate Crew Chief New Hire steps can be found here: &quot;&amp; br()&amp; HYPERLINK(&quot;https://thecaraprogram.sharepoint.com/:w:/s/Solutions/EaQSYEDY2i9KvGU5syEwFVoBlgoHQBCMrETXC5HMP-uWWA?e=KRcY9i&quot;, &quot;Solutions New Hire Steps - Cleanslate Crew Chief&quot;, &quot;_blank&quot;),

if (RecordTypeId=&quot;0124y0000011y56&quot;,

&quot;Employee Update steps can be found here: &quot;&amp; br()&amp; HYPERLINK(&quot;https://thecaraprogram.sharepoint.com/:w:/s/Solutions/Eey5nYBOQo9Pmo1kUBvV8LEBM_zrXK9_ZUFKvSnGU7tBWA?e=ljvCPQ&quot;, &quot;Solutions Employee Update Steps&quot;, &quot;_blank&quot;),

if (RecordTypeId=&quot;0124y0000011y5B&quot;,

&quot;Employee Update steps can be found here: &quot;&amp; br()&amp; HYPERLINK(&quot;https://thecaraprogram.sharepoint.com/:w:/s/Solutions/ET9_eUEPAJpAugxKswNV5_wBLPcm6e1WehcbvUAoyqJPpg?e=HHuDas&quot;, &quot;Solutions Employee Departure Steps&quot;, &quot;_blank&quot;),

NULL))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IT Setup</label>
    <type>Text</type>
</CustomField>