force-app/main/default/objects/Employee_Checklist__c/fields/Salesforce_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Completion_Date__c</fullName>
    <label>Salesforce Completion Date</label>
    <type>Date</type>
</CustomField>