force-app/main/default/objects/Employee_Checklist__c/fields/Salesforce_Completion_Notes__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Completion_Notes__c</fullName>
    <label>Salesforce Completion Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>