force-app/main/default/objects/Employee_Checklist__c/recordTypes/Employee_Departure_Checklist.recordType-meta.xml
<RecordType>
    <fullName>Employee_Departure_Checklist</fullName>
    <active>true</active>
    <label>Employee Departure Checklist</label>
</RecordType>