force-app/main/default/objects/Employee_Checklist__c/recordTypes/Employee_Update_Checklist.recordType-meta.xml
<RecordType>
    <fullName>Employee_Update_Checklist</fullName>
    <active>true</active>
    <label>Employee Update Checklist</label>
</RecordType>