force-app/main/default/objects/Employee_Checklist__c/recordTypes/New_Hire_Checklist.recordType-meta.xml
<RecordType>
    <fullName>New_Hire_Checklist</fullName>
    <active>true</active>
    <label>New Hire Checklist</label>
</RecordType>