force-app/main/default/objects/Employee_Checklist__c/recordTypes/New_Hire_Checklist_Archived.recordType-meta.xml
<RecordType>
    <fullName>New_Hire_Checklist_Archived</fullName>
    <active>true</active>
    <label>New Hire Checklist (Archived)</label>
</RecordType>