force-app/main/default/objects/Employee_Checklist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>IT_Completion_Date__c</columns>
    <columns>Salesforce_Completion_Date__c</columns>
    <columns>Final_Start_Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>